Feat Projectables 추가

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -7,6 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\**" />
+    <Compile Remove="Features\CommonCode\**" />
+    <Content Remove="Controllers\**" />
+    <Content Remove="Features\CommonCode\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <EmbeddedResource Remove="Features\CommonCode\**" />
+    <None Remove="Controllers\**" />
+    <None Remove="Features\CommonCode\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.Projectables" Version="3.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
@@ -19,8 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Features\CommonCode\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
