--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -1,41 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Controllers\**" />
-    <Compile Remove="Features\CommonCode\**" />
-    <Content Remove="Controllers\**" />
-    <Content Remove="Features\CommonCode\**" />
-    <EmbeddedResource Remove="Controllers\**" />
-    <EmbeddedResource Remove="Features\CommonCode\**" />
-    <None Remove="Controllers\**" />
-    <None Remove="Features\CommonCode\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Controllers\**" />
+		<Compile Remove="Features\CommonCode\**" />
+		<Content Remove="Controllers\**" />
+		<Content Remove="Features\CommonCode\**" />
+		<EmbeddedResource Remove="Controllers\**" />
+		<EmbeddedResource Remove="Features\CommonCode\**" />
+		<None Remove="Controllers\**" />
+		<None Remove="Features\CommonCode\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Projectables" Version="3.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
-    <PackageReference Include="Z.Expressions.Eval" Version="5.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="EntityFrameworkCore.Projectables" Version="3.0.4" />
+		<PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="8.1.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
+		<PackageReference Include="Z.Expressions.Eval" Version="5.0.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Migrations\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Infra\Infra.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Infra\Infra.csproj" />
+	</ItemGroup>
 
 </Project>
